# adventofcode

./: .clangd  .gitignore  CMakeLists.txt  README.md
2022/d1/: CMakeLists.txt
2022/d1/include/: d1.h
2022/d1/src/: d1.cpp
2022/d2/: CMakeLists.txt
2022/d2/include/: d2.h
2022/d2/src/: d2.cpp
include/AdventOfCode/: 22d1.h  22d2.h  days.h
src/: CMakeLists.txt
src/2022/: CMakeLists.txt  days.cpp
src/2022/d1/: 22d1.cpp  CMakeLists.txt  d1.cpp
src/2022/d2/: algorithm.cpp  d2.cpp
